...
            "state" : "translated",
            "value" : "网址"
          }
        }
      }
    },
    "Status" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الحالة"
          }
...
            "value" : "Tình trạng"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "状态"
          }
        }
      }
    },
    "URL" : {
      "localizations" : {
...
