...
        toolbarItems![0].isEnabled = isPumpOnboarded
        toolbarItems![0].tintColor = UIColor.carbTintColor
        toolbarItems![4].accessibilityLabel = NSLocalizedString("Bolus", comment: "The label of the bolus entry button")
        toolbarItems![4].isEnabled = isPumpOnboarded
        toolbarItems![4].tintColor = UIColor.insulinTintColor
        toolbarItems![8].accessibilityLabel = NSLocalizedString("Settings", comment: "The label of the settings button")
        toolbarItems![8].accessibilityIdentifier = "status.settings"
        toolbarItems![8].tintColor = UIColor.secondaryLabel
        
        toolbarItems![2] = createPreMealButtonItem(selected: preMealMode == true && preMealModeAllowed, isEnabled: preMealModeAllowed)
        toolbarItems![6] = createWorkoutButtonItem(selected: workoutMode == true && workoutModeAllowed, isEnabled: workoutModeAllowed)
    }

...
            content.imageProperties.tintColor = .glucoseTintColor
            cell.contentConfiguration = content
            cell.accessoryType = .disclosureIndicator
            cell.selectionStyle = .default
            cell.isAccessibilityElement = true
            cell.accessibilityLabel = content.text
            cell.accessibilityIdentifier = "status.glucoseHistory"
            return cell
        case .charts:
            let cell = tableView.dequeueReusableCell(withIdentifier: ChartTableViewCell.className, for: indexPath) as! ChartTableViewCell

            switch ChartRow(rawValue: indexPath.row)! {
            case .glucose:
...
extension StatusTableViewController {
    fileprivate func addCGMManager(withIdentifier identifier: String) {
        switch deviceManager.setupCGMManager(withIdentifier: identifier) {
        case .failure(let error):
            log.error("Failure to setup CGM manager with identifier '%{public}@': %{public}@", identifier, String(describing: error))
            let alert = UIAlertController(
                title: NSLocalizedString("Unable to Open CGM", comment: "Alert title shown when a CGM setup screen cannot be opened"),
                message: String(format: NSLocalizedString("Loop could not open %@. Error: %@", comment: "Alert message shown when a CGM setup screen cannot be opened. (1: CGM identifier) (2: error description)"), identifier, String(describing: error)),
                preferredStyle: .alert
            )
            alert.addAction(UIAlertAction(title: NSLocalizedString("OK", comment: "Button title to dismiss an alert"), style: .default))
            presentAfterDismissingPresentedViewController(alert)
        case .success(let success):
...
